--- a/ecosystem.html
+++ b/ecosystem.html
@@ -18,9 +18,10 @@
                                         <a href="#" class="logo">Wonderland</a>
                               </h2>
                               <div class="navigation">
-                                        <a href="#">Ecosystem</a>
-
                                         <a href="index.html">Home</a>
+
+                                        <a href="#">Projects</a>
+
                                         <a href="#">About</a>
                                         <a href="#">Info</a>
                                         <a href="#">Services</a>
@@ -33,16 +34,16 @@
                     </header>
                     <div class="content">
                               <div class="info">
-                                        <h2>Like Nature <br> <span>Be creative!</span></h2>
+                                        <h2>Projects <br> <span></span></h2>
+                                        <p>Incubated by MVP</p>
 
-                                        <a href="#" class="info-btn">More Info</a>
                               </div>
                               <div class="features">
                                         <div class="sites">
                                                   <img src="https://i.pinimg.com/736x/48/4e/50/484e506aef2d46a15b6cd46fe04c7522.jpg"
                                                             alt="">
                                                   <a href="https://coin-buddy.netlify.app/">
-                                                            <h3>CoinBuddy</h3>
+                                                            <h3>CoinBuddy (Coming soon...)</h3>
                                                   </a>
                                                   <p>Coinbuddy is an innovative online platform designed to provide
                                                             cryptocurrency enthusiasts with a <a href="COinBuddy.html">
@@ -59,7 +60,7 @@
                                                   <img src="https://t3.ftcdn.net/jpg/04/34/47/02/360_F_434470293_ci8kmd0r1UXfwZd5mhPxOqVqf47IIWXk.jpg"
                                                             alt="">
                                                   <a href="https://eimibazaar.netlify.app/">
-                                                            <h3>EimiBazaar</h3>
+                                                            <h3>EimiBazaar (Coming soon...)</h3>
                                                   </a>
                                                   <p>EimiBazaar is a cutting-edge e-commerce platform designed to
                                                             provide customers with a seamless and personalized shopping
@@ -71,7 +72,7 @@
                                                   <img src="https://fiverr-res.cloudinary.com/images/q_auto,f_auto/gigs/107062057/original/bb8cd74d769924d047afc7aab9862f78397ba89e/create-a-flat-landscape-illustration-for-you.jpg"
                                                             alt="">
                                                   <a href="https://moonfund.netlify.app/">
-                                                            <h3>Moon Fund</h3>
+                                                            <h3>Moon Fund (Coming soon...)</h3>
                                                   </a>
                                                   <p>Moon Fund is a permissionless wealth management platform that
                                                             leverages blockchain and <a href="Moonfund.html">
@@ -87,12 +88,12 @@
                                                   <img src="https://mir-s3-cdn-cf.behance.net/project_modules/max_1200/601cff100293125.5f0622ff686a5.jpg"
                                                             alt="">
                                                   <a href="#">
-                                                            <h3>ZeroToHero</h3>
+                                                            <h3>ZeroToHero (Coming soon...)</h3>
                                                   </a>
                                                   <p>ZerotoHero is an online learning platform that offers a
                                                             comprehensive range of courses and tutorials to help
                                                             individuals enhance their skills and knowledge in various
-                                                            fields</p>
+                                                            fields.</p>
 
 
                                         </div>
