--- a/index.html
+++ b/index.html
@@ -18,9 +18,10 @@
                                         <a href="#" class="logo">Wonderland</a>
                               </h2>
                               <div class="navigation">
-                                        <a href="ecosystem.html">Ecosystem</a>
-
                                         <a href="#">Home</a>
+
+                                        <a href="ecosystem.html">Projects</a>
+
                                         <a href="#">About</a>
                                         <a href="#">Info</a>
                                         <a href="#">Services</a>
