--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                               <div class="info">
                                         <h2>Endless <br> <span>Adventure</span></h2>
                                         <p>Discover the beauty of simplicity in Wonderland.</p>
-                                        <a href="#" class="info-btn">More Info</a>
+                                        <a href="ecosystem.html" class="info-btn">Projects</a>
                               </div>
                     </div>
 
@@ -72,6 +72,19 @@
 
 
           </section>
+
+
+
+
+
+
+
+
+
+
+
+
+
 
           <script type="text/javascript">
                     const playButton = document.getElementById("playButton");
