--- a/index.html
+++ b/index.html
@@ -34,7 +34,8 @@
                     </header>
                     <div class="content">
                               <div class="info">
-                                        <h2>Endless <br> <span>Adventure</span></h2>
+                                        <h2>Endless <br> <span style="position: relative; right: 20px;">Adventure</span>
+                                        </h2>
                                         <p>Discover the beauty of simplicity in Wonderland.</p>
                                         <a href="ecosystem.html" class="info-btn">Projects</a>
                               </div>
